// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tshandler appends node with text 1`] = `
"// Here's a comment
var a = 1;

var b = 2;

var c = 3;
"
`;

exports[`tshandler prepends node with text 1`] = `
"// Here's a comment
var a = 1;

var b = 2;

var c = 3;
"
`;

exports[`tshandler removes node 1`] = `
"// Here's a comment
var a = 1;

var b = 2;

console.log('remove me');

var c = 3;
"
`;

exports[`tshandler removes node fully 1`] = `
"// Here's a comment
var a = 1;

var b = 2;

console.log('remove me fully');

var c = 3;
"
`;

exports[`tshandler replaces node with text 1`] = `
"// Here's a comment
var a = 1;

var b = 2;

var c = 3;

console.log(a);

console.log(b);
"
`;
